Added lead and swagger support
